fix: prevent horizontal scrollbar between 1920-1945px page width

--- a/src/components/PageSection/PageSection.css
+++ b/src/components/PageSection/PageSection.css
@@ -40,7 +40,7 @@
 @media only screen and (min-width: 1920px) {
 
   .page-section {
-    width: 1920px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
   }
